# NecessaryConditionAnalysis

./: .gitignore  Python.gitignore  README.md  pyproject.toml  testing_NCA_class.py  testing_NCA_class_1_ACCURACY_CEILING_ZONE_Innovation_performance_vs_Individualism_Risk_taking.py  testing_NCA_class_1_Life_expectancy_vs_Vaccination_Basic_Education.py  testing_NCA_class_ACCURACY_Innovation_performance_vs_Individualism_Risk_taking.py
src/NecessaryConditionAnalysis/: __init__.py  main.py
src/NecessaryConditionAnalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/NecessaryConditionAnalysis/datasets/: NCA-MOOC-2005.csv  NCA_example_Individualism_Risk_taking_Innovation_performance.csv
