[project]
name = "NecessaryConditionAnalysis"
version = "0.1.2"
authors = [
  { name="Ricardo Chavelas Manzo", email="R.ChavelasManzo@tilburguniversity.edu" },
]
description = "Necessary Condition Analysis in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.25",
  "matplotlib>=3.7",
]